--- a/ttsdemo/index.html
+++ b/ttsdemo/index.html
@@ -90,7 +90,7 @@
           <tr class="text-left font-semibold text-sm text-gray-600">
             <th class="w-[40%] px-2">Text</th>
             <th class="w-[80px] px-2 text-center">Speaker Prompt</th>
-            <th class="w-[20%] px-2 text-center">MoE Without Expert Editing</th>
+            <th class="w-[20%] px-2 text-center">Synthesized Speech</th>
           </tr>
         </thead>
         <tbody class="text-sm">
