--- a/ttsdemo/index.html
+++ b/ttsdemo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Nycuka</title>
+  <title>speech synthesis</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <!-- 在 <head> 中加這個 CSS -->
   <style>
