--- a/ttsdemo/index.html
+++ b/ttsdemo/index.html
@@ -18,6 +18,53 @@
 
   <div class="max-w-5xl mx-auto py-10 space-y-10">
 
+
+
+     <!-- 第一區塊 -->
+    <div class="bg-white shadow-md rounded-lg p-6">
+      <h2 class="text-2xl font-semibold text-center mb-6">Forgetting issue</h2>
+
+      <style>
+        td {
+          text-align: center;
+          vertical-align: middle;
+        }
+
+        .tts-player {
+          max-width: 250px;
+          transform: scale(0.9);
+          transform-origin:center;
+        }
+      </style>
+
+      <table class="w-full table-fixed border-separate border-spacing-y-4">
+        <thead>
+          <tr class="text-left font-semibold text-sm text-gray-600">
+            <th class="w-[40%] px-2">Text</th>
+            <th class="w-[80px] px-2 text-center">Speaker Prompt</th>
+            <th class="w-[20%] px-2 text-center">MoE Without Expert Editing</th>
+            <th class="w-[20%] px-2 text-center text-blue-600">MoE with Expert Editing</th>
+          </tr>
+        </thead>
+        <tbody class="text-sm">
+          <tr class="border-t">
+            <td class="px-2 break-words">你還記得我們上次吃的pizza是甚麼口味的嗎</td>
+            <td class="text-center align-middle" rowspan="4">
+              <audio controls preload="metadata" class="tts-player" src="prompt\js-209.wav"></audio>
+            </td>
+            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\forgpizza.wav"></audio></td>
+            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\nonforpizza.wav"></audio></td>
+          </tr>
+          <tr class="border-t">
+            <td class="px-2 break-words">這個Language model很好用，功能很多</td>
+            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\MoEforgetLLM.wav"></audio></td>
+            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\nonforgetllm.wav"></audio></td>
+          </tr>
+         
+        </tbody>
+      </table>
+    </div>
+
     <!-- 第一區塊 -->
     <div class="bg-white shadow-md rounded-lg p-6">
       <h2 class="text-2xl font-semibold text-center mb-6">Taiwanese voice Samples</h2>
@@ -41,7 +88,7 @@
             <th class="w-[40%] px-2">Text</th>
             <th class="w-[80px] px-2 text-center">Speaker Prompt</th>
             <th class="w-[20%] px-2 text-center">MoE Without Expert Editing</th>
-            <th class="w-[20%] px-2 text-center">MoE with Expert Editing</th>
+            <th class="w-[20%] px-2 text-center text-blue-600">MoE with Expert Editing</th>
           </tr>
         </thead>
         <tbody class="text-sm">
@@ -90,7 +137,7 @@
           <tr class="text-left font-semibold text-sm text-gray-600">
             <th class="w-[40%] px-2">Text</th>
             <th class="w-[80px] px-2 text-center">Speaker Prompt</th>
-            <th class="w-[20%] px-2 text-center">MoE With Expert Editing</th>
+            <th class="w-[20%] px-2 text-center text-blue-600">MoE With Expert Editing</th>
           </tr>
         </thead>
         <tbody class="text-sm">
@@ -154,7 +201,7 @@
             <th class="w-[40%] px-2">Text</th>
             <th class="w-[80px] px-2 text-center">Emotion</th>
             <th class="w-[20%] px-2 text-center">speaker prompt</th>
-            <th class="w-[20%] px-2 text-center">Synthesized Speech</th>
+            <th class="w-[20%] px-2 text-center text-blue-600">MoE With Expert Editing</th>
           </tr>
         </thead>
         <tbody class="text-sm">
@@ -209,7 +256,7 @@
             <th class="w-[40%] px-2">Text</th>
             <th class="w-[80px] px-2 text-center">Speaker Prompt</th>
             <th class="w-[20%] px-2 text-center">VALL-E-X</th>
-            <th class="w-[20%] px-2 text-center">Our proposed model</th>
+            <th class="w-[20%] px-2 text-center text-blue-600">MoE With Expert Editing</th>
           </tr>
         </thead>
         <tbody class="text-sm">
@@ -243,50 +290,7 @@
 
 
 
-    <!-- 第一區塊 -->
-    <div class="bg-white shadow-md rounded-lg p-6">
-      <h2 class="text-2xl font-semibold text-center mb-6">Forgetting issue</h2>
-
-      <style>
-        td {
-          text-align: center;
-          vertical-align: middle;
-        }
-
-        .tts-player {
-          max-width: 250px;
-          transform: scale(0.9);
-          transform-origin:center;
-        }
-      </style>
-
-      <table class="w-full table-fixed border-separate border-spacing-y-4">
-        <thead>
-          <tr class="text-left font-semibold text-sm text-gray-600">
-            <th class="w-[40%] px-2">Text</th>
-            <th class="w-[80px] px-2 text-center">Speaker Prompt</th>
-            <th class="w-[20%] px-2 text-center">MoE Without Expert Editing</th>
-            <th class="w-[20%] px-2 text-center">MoE with Expert Editing</th>
-          </tr>
-        </thead>
-        <tbody class="text-sm">
-          <tr class="border-t">
-            <td class="px-2 break-words">你還記得我們上次吃的pizza是甚麼口味的嗎</td>
-            <td class="text-center align-middle" rowspan="4">
-              <audio controls preload="metadata" class="tts-player" src="prompt\js-209.wav"></audio>
-            </td>
-            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\forgpizza.wav"></audio></td>
-            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\nonforpizza.wav"></audio></td>
-          </tr>
-          <tr class="border-t">
-            <td class="px-2 break-words">這個Language model很好用，功能很多</td>
-            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\MoEforgetLLM.wav"></audio></td>
-            <td class="text-center"><audio controls preload="metadata" class="tts-player" src="MoE2\forgetting\nonforgetllm.wav"></audio></td>
-          </tr>
-         
-        </tbody>
-      </table>
-    </div>
+   
 
 
   </div>
