Refactor HTML structure and styles in index.html

--- a/ttsdemo/index.html
+++ b/ttsdemo/index.html
@@ -175,7 +175,7 @@
             <td class="text-center"><audio controls preload="metadata" class="tts-player" src="emo\lossemoney.wav"></audio></td>
           </tr>
           <tr class="border-t">
-            <td class="px-2 break-words">我玩家密貨幣又被當韭菜了</td>
+            <td class="px-2 break-words">我玩加密貨幣又被當韭菜了</td>
             <td class="text-center">Angry</td>
             <td class="text-center"><audio controls preload="metadata" class="tts-player" src="prompt\Anger_prompt.wav"></audio></td>
             <td class="text-center"><audio controls preload="metadata" class="tts-player" src="emo\lossmoneyforcrypito.wav"></audio></td>
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
